Time: 3 ms (34.72%) | Memory: 45.7 MB (67.89%) - LeetSync